@@ -1,4 +1,4 @@
-/*	$NetBSD: tcp_timer.h,v 1.24 2006/09/26 06:39:22 jeremy Exp $	*/
+/*	$NetBSD: tcp_timer.h,v 1.25 2007/06/20 15:29:19 christos Exp $	*/
 
 /*-
  * Copyright (c) 2001, 2005 The NetBSD Foundation, Inc.
@@ -182,11 +182,11 @@ typedef void (*tcp_timer_func_t)(void *);
 
 extern const tcp_timer_func_t tcp_timer_funcs[TCPT_NTIMERS];
 
-extern int tcp_keepidle;		/* time before keepalive probes begin */
-extern int tcp_keepintvl;		/* time between keepalive probes */
-extern int tcp_keepcnt;			/* number of keepalives, 0=infty */
+extern u_int tcp_keepinit;		/* time before initial connection times out */
+extern u_int tcp_keepidle;		/* time before keepalive probes begin */
+extern u_int tcp_keepintvl;		/* time between keepalive probes */
+extern u_int tcp_keepcnt;		/* number of keepalives, 0=infty */
 extern int tcp_maxpersistidle;		/* max idle time in persist */
-extern int tcp_maxidle;			/* time to drop after starting probes */
 extern int tcp_ttl;			/* time to live for TCP segs */
 extern const int tcp_backoff[];
 
